# aoc-2024

./: .gitignore  LICENSE  aoc2024.cabal  shell.nix  test.hs
app/: Main.hs
app/Day/: Four.hs  One.hs  Three.hs  Two.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
