cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Chandler Barlow
maintainer:         chandlerbrlw@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day.One
    other-extensions: LambdaCase,
                      OverloadedRecordDot,
                      TypeApplications
                      
    build-depends:    base ^>=4.18.2.1,
                      containers,
                      heaps
    hs-source-dirs:   app
    default-language: Haskell2010
